alteração na  layout

--- a/Intranet/Views/Shared/_Layout.cshtml
+++ b/Intranet/Views/Shared/_Layout.cshtml
@@ -110,7 +110,7 @@
                 <h5><i class="fa-brands fa-youtube"></i></h5>
             </div>
             <div class="col-12 col-sm-4 col-md-4 col-lg-4 text-center">
-                Portal da Empresa
+                Portal SoftHair
             </div>
         </div>
     </div>
