--- a/Intranet/Views/Home/_Home.cshtml
+++ b/Intranet/Views/Home/_Home.cshtml
@@ -50,8 +50,7 @@
         .fc-event.municipal {
             background-color: #007bff;
         }
-</style>
-<style>
+
     /*Estilização do scroll Reveal*/
     .reveal {
         opacity: 0;
@@ -63,8 +62,7 @@
             opacity: 1;
             transform: translateY(0);
         }
-</style>
-<style>
+
     #holiday-legend-container {
         margin-top: 20px;
         padding: 20px;
@@ -171,8 +169,8 @@
         <div class="col-md-3 mb-3 mx-2">
             <div class="card alert alert-warning" style="height: 300px">
                 <div class="card-body">
-                    <h5 class="card-title"><strong>Mural SoftHair Abril</strong></h5>
-                    <p class="card-text">Dê uma olhada no nosso mural de Abril!</p>
+                    <h5 class="card-title"><strong>Dia dos Trabalhadores!</strong></h5>
+                    <p class="card-text">Dê uma olhada em quem faz tudo acontecer!</p>
                     <p class="cursor-pointer" data-bs-toggle="modal" data-bs-target="#infoModal1"><strong>Ver mais</strong></p>
                 </div>
             </div>
@@ -215,91 +213,21 @@
                     </tr>
                 </thead>
                 <tbody class="bg-white">
-                    <tr>
-                        <td>Milene Fisio</td>
-                        <td>06/04</td>
-                        <td>Fisioterapia</td>
-                    </tr>
-                    <tr>
-                        <td>Luiz Caio</td>
-                        <td>09/04</td>
-                        <td>Administrativo</td>
-                    </tr>
-                    <tr>
-                        <td>Felipe Vieira</td>
-                        <td>13/04</td>
-                        <td>Administrativo</td>
-                    </tr>
-                    <tr>
-                        <td>Jade Dayanne</td>
-                        <td>22/04</td>
-                        <td>Administrativo</td>
-                    </tr>
-                    <tr>
-                        <td>Luiara Fernanda</td>
-                        <td>12/04</td>
-                        <td>Administrativo</td>
-                    </tr>
-                    <tr>
-                        <td>Maria Eduarda</td>
-                        <td>22/04</td>
-                        <td>Administrativo</td>
-                    </tr>
-                    <tr>
-                        <td>Naderval Miranda</td>
-                        <td>23/04</td>
-                        <td>Administrativo</td>
-                    </tr>
-                    <tr>
-                        <td>Mariana Ferreira</td>
-                        <td>28/04</td>
-                        <td>Administrativo</td>
-                    </tr>
-                    <tr>
-                        <td>Rodrigo de Sousa</td>
-                        <td>10/04</td>
-                        <td>Diretoria</td>
-                    </tr>
-                    <tr>
-                        <td>Diane de Paula</td>
-                        <td>03/04</td>
-                        <td>Produção</td>
-                    </tr>
-                    <tr>
-                        <td>Eliezer Teixeira</td>
-                        <td>03/04</td>
-                        <td>Produção</td>
-                    </tr>
-                    <tr>
-                        <td>Claudia Alessandra</td>
-                        <td>06/04</td>
-                        <td>Produção</td>
-                    </tr>
-                    <tr>
-                        <td>Rafael Ferreira</td>
-                        <td>14/04</td>
-                        <td>Produção</td>
-                    </tr>
-                    <tr>
-                        <td>Sama Marília</td>
-                        <td>15/04</td>
-                        <td>Produção</td>
-                    </tr>
-                    <tr>
-                        <td>Aline Assis</td>
-                        <td>19/04</td>
-                        <td>Produção</td>
-                    </tr>
-                    <tr>
-                        <td>Eduardo Alves</td>
-                        <td>22/04</td>
-                        <td>Produção</td>
-                    </tr>
-                    <tr>
-                        <td>Samuel</td>
-                        <td>25/04</td>
-                        <td>Elza/CD</td>
-                    </tr>
+                    <tr><td>Izabela Amora</td><td>03/05</td><td>Administrativo</td></tr>
+                    <tr><td>Maicon Douglas</td><td>03/05</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Leandra Aparecida</td><td>08/05</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Barbara Silva</td><td>09/05</td><td>Vitrine/CD Contagem</td></tr>
+                    <tr><td>Crimacia Claudia</td><td>15/05</td><td>Administrativo</td></tr>
+                    <tr><td>Debora Cristina</td><td>16/05</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Josiane Carvalho</td><td>20/05</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Adila Barbosa</td><td>21/05</td><td>Administrativo</td></tr>
+                    <tr><td>Danielle Stefania</td><td>23/05</td><td>Administrativo</td></tr>
+                    <tr><td>João Victor Bicalho</td><td>24/05</td><td>Administrativo</td></tr>
+                    <tr><td>Pamela Ferreira</td><td>24/05</td><td>Elza/CD</td></tr>
+                    <tr><td>Michelle de Castro</td><td>26/05</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Matheus Ferreira</td><td>27/05</td><td>Elza Matriz/Produção</td></tr>
+                    <tr><td>Wagner da Pureza</td><td>27/05</td><td>Elza/CD</td></tr>
+                    <tr><td>Dayse Mara</td><td>29/05</td><td>Administrativo</td></tr>
                 </tbody>
             </table>
         </div>
@@ -349,15 +277,15 @@
     </div>
 </div>
 <div class="modal fade" id="infoModal1" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="infoModalLabel">Mural Softhair Abril</h5>
+                <h5 class="modal-title" id="infoModalLabel">Banner do Dia dos Trabalhadores</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
 
-                <img src="~/Content/Avisos/Imagem1.png" class="img-fluid" />
+                <img src="~/Content/Banner/Banner dia do trabalhador_CV - compacto.jpg" class="img-fluid" />
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
