--- a/Intranet/Views/Shared/_Layout.cshtml
+++ b/Intranet/Views/Shared/_Layout.cshtml
@@ -87,6 +87,7 @@
                                 </li>
                             </ul>
                         </li>
+                        <li><a href="https://localhost:44382/AgendamentoReuniao" class="nav-link text-white">AGENDAMENTOS</a></li>
                     </ul>
                 </div>
             </div>
