--- a/Intranet/Views/Shared/_Layout.cshtml
+++ b/Intranet/Views/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li><a href="https://localhost:44382/AgendamentoReuniao" class="nav-link text-white">AGENDAMENTOS</a></li>
+                        <li><a href="http://192.168.0.204/sics/AgendamentoReuniao/" class="nav-link text-white">AGENDAMENTOS</a></li>
                     </ul>
                 </div>
             </div>
