alterações ramais e adição ficha ginastica

--- a/Intranet/Views/Home/_Contact.cshtml
+++ b/Intranet/Views/Home/_Contact.cshtml
@@ -25,7 +25,7 @@
             </div>
         </div>
         <p class="text-center mb-5">Utilize a barra de pesquisa para encontrar o contato de algum colaborador da empresa. <strong>Não repassar diretamente ligações aos nomes destacados!!!</strong></p>
-        <div class="col-sm-12 col-md-8 mb-3" style="width: 100%; height:800px">
+        <div class="col-sm-12 col-md-8 mb-3" style="width: 100%; height:900px">
             <table id="myTable2" class="display text-center table-bordered">
                 <thead style="background-color: #CCA9DD;">
                     <tr>
@@ -73,17 +73,19 @@
                         <td class="email-cell">promocoes@softhair.com.br</td>
                         <td>Merchandising</td>
                     </tr>
+
+                    <!--Trade Marketing-->
                     <tr>
                         <td>Deivid Rodrigues</td>
                         <td>7748</td>
                         <td class="email-cell">promocoes1@softhair.com.br</td>
-                        <td>Merchandising</td>
+                        <td>Trade Marketing</td>
                     </tr>
                     <tr>
                         <td>Bárbara Vitória</td>
                         <td>7738</td>
                         <td class="email-cell">promocoes2@softhair.com.br</td>
-                        <td>Gestão de Pessoas</td>
+                        <td>Trade Marketing</td>
                     </tr>
                     <tr>
                         <td>Luiz Caio</td>
@@ -208,17 +210,19 @@
                         <td class="email-cell">publicidade2@softhair.com.br</td>
                         <td>Marketing</td>
                     </tr>
+
+                    <!--E-commerce-->
                     <tr>
                         <td>Karolina Chaves</td>
                         <td>7712</td>
                         <td class="email-cell">ecommerce@softhair.com.br</td>
-                        <td>Marketing</td>
+                        <td>E-Commerce</td>
                     </tr>
                     <tr>
                         <td>Lorrayne Braga</td>
                         <td>7708</td>
                         <td class="email-cell">loja@softhair.com.br</td>
-                        <td>Marketing</td>
+                        <td>E-Commerce</td>
                     </tr>
 
                     <!-- Compras -->
@@ -432,7 +436,7 @@
                         <td>Daisy Paula</td>
                         <td>(31) 98451-9239</td>
                         <td class="email-cell">vitrine.qualidade@gmail.com</td>
-                        <td>Vitrine DISTRIBUIDORA</td>
+                        <td>E-Commerce</td>
                     </tr>
                 </tbody>
             </table>
@@ -481,7 +485,7 @@
             topEnd: null,
             bottomStart: null,
         },
-        scrollY: '600px', // Aqui você pode configurar o número de itens por página se quiser, mas o menu não será exibido
+        scrollY: '700px', // Aqui você pode configurar o número de itens por página se quiser, mas o menu não será exibido
         language: {
             search: "🔍",
             searchPlaceholder: "PESQUISE AQUI...",
