--- a/Intranet/Views/Home/_Home.cshtml
+++ b/Intranet/Views/Home/_Home.cshtml
@@ -51,6 +51,11 @@
             background-color: #007bff;
         }
 
+        .fc-event.event {
+            background-color: #eead2d;
+            
+        }
+
     /*Estilização do scroll Reveal*/
     .reveal {
         opacity: 0;
@@ -113,6 +118,12 @@
 
             #holiday-legend li.municipal {
                 border-left-color: #1e88e5; /* azul */
+            }
+
+            #holiday-legend li.event {
+                border-left: 5px solid #fbc02d; /* amarelo */
+                padding-left: 8px;
+                margin-bottom: 5px;
             }
 
             #holiday-legend li span {
@@ -203,7 +214,7 @@
         </div>
         <p class="text-center mb-5 reveal">Parte destinada a todos os aniversariante do mês</p>
 
-        <div class="col-sm-12 col-md-8 reveal">
+        <div class="col-sm-12 col-md-8 reveal mb-5">
             <table id="myTable" class="display table-responsive">
                 <thead>
                     <tr style="background-color: violet;">
@@ -231,9 +242,73 @@
                 </tbody>
             </table>
         </div>
-        @*<div class="col-sm-12 col-md-6 reveal">
-            <img src="~/Content/Imagens/birthday.png" class="img-fluid"/>
-        </div>*@
+
+        <span class="reveal py-2 px-5 fs-3 rounded-4 text-center" style="color:purple; background-color: #F8F9FA;"><strong>FICHA DE GINÁSTICA - ESCRITÓRIO</strong></span>
+        <div class="d-flex align-items-center justify-content-center my-3 reveal">
+            <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
+            <span class="px-2 text-muted text-center" style="font-size: 2rem;">
+                <i class="fa-solid fa-people-group"></i>
+            </span>
+            <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
+        </div>
+            <div class="col-8">
+                <table id="myTable3" class="display table-responsive table-bordered text-center reveal">
+                    <thead>
+                        <tr style="background-color: violet;">
+                            <th>DATA</th>
+                            <th>NOME</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr><td>01/mai</td><td><strong>Feriado</strong></td></tr>
+                        <tr><td>02/mai</td><td>Paula</td></tr>
+                        <tr><td>05/mai</td><td>Pedro Ivo</td></tr>
+                        <tr><td>06/mai</td><td>Quintiliana (Tininha)</td></tr>
+                        <tr><td>07/mai</td><td>Tatiane Franco</td></tr>
+                        <tr><td>08/mai</td><td>Thiago Soares</td></tr>
+                        <tr><td>09/mai</td><td>Victor César</td></tr>
+                        <tr><td>12/mai</td><td>Adila Ribeiro</td></tr>
+                        <tr><td>13/mai</td><td>Alana</td></tr>
+                        <tr><td>14/mai</td><td>Aline Moreira</td></tr>
+                        <tr><td>15/mai</td><td>Andreza</td></tr>
+                        <tr><td>16/mai</td><td>Barbára Vitória</td></tr>
+                        <tr><td>19/mai</td><td>Berenice Longuinhos</td></tr>
+                        <tr><td>20/mai</td><td>Camila Barbosa</td></tr>
+                        <tr><td>21/mai</td><td>Crimacia Oliveira</td></tr>
+                        <tr><td>22/mai</td><td>Danielle Stefânia</td></tr>
+                        <tr><td>23/mai</td><td>Dayse Mara</td></tr>
+                        <tr><td>26/mai</td><td>Dayse Xavier</td></tr>
+                        <tr><td>27/mai</td><td>Deivid Rodrigues</td></tr>
+                        <tr><td>28/mai</td><td>Fagner Miguel</td></tr>
+                        <tr><td>29/mai</td><td>Felipe</td></tr>
+                        <tr><td>30/mai</td><td>Gerald Wagner</td></tr>
+                        <tr><td>02/jun</td><td>Isabella Freesz</td></tr>
+                        <tr><td>03/jun</td><td>Izabela Santos</td></tr>
+                        <tr><td>04/jun</td><td>Jade Dayanne</td></tr>
+                        <tr><td>05/jun</td><td>Jaqueline</td></tr>
+                        <tr><td>06/jun</td><td>João Victor</td></tr>
+                        <tr><td>09/jun</td><td>Karolina</td></tr>
+                        <tr><td>10/jun</td><td>Karoline Sonaly</td></tr>
+                        <tr><td>11/jun</td><td>Lívia Carvalho</td></tr>
+                        <tr><td>12/jun</td><td>Lorrayne Braga</td></tr>
+                        <tr><td>13/jun</td><td>Luana Alves</td></tr>
+                        <tr><td>16/jun</td><td>Luiz Caio</td></tr>
+                        <tr><td>17/jun</td><td>Luiz Guilherme</td></tr>
+                        <tr><td>18/jun</td><td>Luiz Gustavo</td></tr>
+                        <tr><td>19/jun</td><td>Feriado</td></tr>
+                        <tr><td>20/jun</td><td>Maria Eduarda</td></tr>
+                        <tr><td>23/jun</td><td>Maria Laura</td></tr>
+                        <tr><td>24/jun</td><td>Mariana Ferreira</td></tr>
+                        <tr><td>25/jun</td><td>Miguel Salles</td></tr>
+                        <tr><td>26/jun</td><td>Natã</td></tr>
+                        <tr><td>27/jun</td><td>Paula</td></tr>
+                        <tr><td>30/jun</td><td>Pedro Ivo</td></tr>
+                    </tbody>
+                </table>
+            </div>
+            @*<div class="col-sm-12 col-md-6 reveal">
+                <img src="~/Content/Imagens/birthday.png" class="img-fluid"/>
+            </div>*@
         </div>
 
         <div class="container reveal" id="calendarioSection" style="height: 50px">
@@ -346,7 +421,15 @@
             { title: 'Corpus Christi', date: '2025-06-19', type: 'municipal' },
             { title: 'Nossa Senhora do Carmo', date: '2025-07-16', type: 'municipal' },
             { title: 'Assunção de Nossa Senhora', date: '2025-08-15', type: 'municipal' },
-            { title: 'Imaculada Conceição', date: '2025-12-08', type: 'municipal' }
+            { title: 'Imaculada Conceição', date: '2025-12-08', type: 'municipal' },
+
+            { title: 'Aniversariantes de Junho', date: '2025-06-10', type: 'event' },
+            { title: 'Aniversariantes de Julho', date: '2025-07-08', type: 'event' },
+            { title: 'Aniversariantes de Agosto', date: '2025-08-12', type: 'event' },
+            { title: 'Aniversariantes de Setembro', date: '2025-09-16', type: 'event' },
+            { title: 'Aniversariantes de Outubro', date: '2025-10-07', type: 'event' },
+            { title: 'Aniversariantes de Novembro', date: '2025-11-11', type: 'event' },
+            { title: 'Aniversariantes de Dezembro', date: '2025-12-09', type: 'event' }
         ];
 
         var calendar = new FullCalendar.Calendar(calendarEl, {
@@ -374,7 +457,10 @@
 
             legendEl.innerHTML = filteredHolidays.length ?
                 filteredHolidays.map(h => {
-                    const icon = h.type === 'national' ? '🇧🇷' : '🏙️';
+                    let icon = '';
+                    if (h.type === 'national') icon = '🇧🇷';
+                    else if (h.type === 'municipal') icon = '🏙️';
+                    else if (h.type === 'event') icon = '🎉';
                     const [year, month, day] = h.date.split('-');
                     return `<li class="${h.type}">
                         <span class="icon">${icon}</span>
@@ -400,6 +486,24 @@
         },
 
     });
+    new DataTable('#myTable3', {
+        paging: false,
+        scrollCollapse: true,
+        ordering: false,
+        layout: {
+            topStart: 'search',
+            topEnd: null,
+            bottomStart: null,
+        },
+        scrollY: '600px', // Aqui você pode configurar o número de itens por página se quiser, mas o menu não será exibido
+        language: {
+            search: "🔍",
+            searchPlaceholder: "PESQUISE AQUI...",
+            decimal: ",",
+            "sInfo": "",
+        },
+    });
+
     function revealOnScroll() {
         $(".reveal").each(function () {
             const windowHeight = $(window).height();
