commit avisos (home) e efeito visual (about)

--- a/Intranet/Views/Home/_About.cshtml
+++ b/Intranet/Views/Home/_About.cshtml
@@ -21,55 +21,8 @@
             <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
         </div>
     </div>
-    <!--<p class="text-center mb-5 reveal">Valores da Empresa</p>
-    <div id="timelineCarousel" class="carousel slide pb-5 reveal" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="d-flex justify-content-center align-items-center carousel-content">
-                    <div class="p-4 bg-transparent ">
-                        <h3><strong>Missão</strong></h3>
-                        <p>
-                            <strong>- Modernidade<br />- Criatividade<br />- Diversidade<br />- Qualidade<br />- Comprometimento</strong>
-                        </p>
-                    </div>
-                    <img src="~/Content/Icones/3138297.png" class="img-fluid rounded" alt="Evento 1" style="height:200px">
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="d-flex justify-content-center align-items-center carousel-content">
-                    <div class="p-4 bg-transparent ">
-                        <h3><strong>Visão</strong></h3>
-                        <p>
-                            <strong>- Competitividade<br />- Custo x Benefício<br />- Exclusividade</strong>
-                        </p>
-                    </div>
-                    <img src="~/Content/Icones/ideia.png" class="img-fluid rounded" alt="Evento 1" style="height:200px">
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="d-flex justify-content-center align-items-center carousel-content">
-                    <div class="p-4 bg-transparent ">
-                        <h3><strong>Valores</strong></h3>
-                        <p>
-                            <strong>- Respeito<br />- Comprometimento<br />- Diversidade<br />- Ética</strong>
-                        </p>
-                    </div>
-                    <img src="~/Content/Icones/balanca-de-justica.png" class="img-fluid rounded" alt="Evento 1" style="height:200px">
-                </div>
-            </div>
-        </div>-->
 
-        <!-- Controles do Carousel -->
-        <!--<button class="carousel-control-prev" type="button" data-bs-target="#timelineCarousel" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Anterior</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#timelineCarousel" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Próximo</span>
-        </button>
-    </div>-->
-    <div class="row gap-3 justify-content-center pb-5">
+    <div class="row gap-3 justify-content-center pb-5 reveal">
         <div class="col-12 text-center my-3">
             <h3><strong>Regras de Boa Convivência</strong></h3>
             <p>
