--- a/Intranet/Views/Home/_Home.cshtml
+++ b/Intranet/Views/Home/_Home.cshtml
@@ -167,10 +167,14 @@
 
     <div id="aniversariantesSection" class="row mt-3 mb-5 justify-content-around reveal" style="width: 100%;">
         <div class="col-md-3 mb-3 mx-2">
-            <div class="card alert alert-warning" style="height: 300px">
+            <div class="card alert alert-warning px-0 pt-0" style="height: 100%; border: none;">
+                <img src="~/Content/Avisos/Mãos para o futuro (002).jpg" class="card-img-top rounded-top-3" alt="Selo Sustentável da SoftHair"
+                     style="width: 100%; height: 150px; object-fit: cover; object-position: top;">
                 <div class="card-body">
                     <h5 class="card-title"><strong>Novo Selo Sustentável da SoftHair</strong></h5>
-                    <p class="card-text">Estamos entusiasmados em compartilhar uma novidade incrível com todos vocês! A partir de agora, as embalagens dos nossos produtos levarão o selo do programa Mãos Pro Futuro, da abihpecoficial.</p>
+                    <p class="card-text">
+                        Estamos entusiasmados em compartilhar uma novidade incrível com todos vocês!
+                    </p>
                     <p class="cursor-pointer" data-bs-toggle="modal" data-bs-target="#infoModal">
                         <strong>Ver mais</strong>
                     </p>
@@ -178,7 +182,9 @@
             </div>
         </div>
         <div class="col-md-3 mb-3 mx-2">
-            <div class="card alert alert-warning" style="height: 300px">
+            <div class="card alert alert-warning px-0 pt-0" style="height: 100%; border: none;">
+                <img src="~/Content/Banner/Banner dia do trabalhador_CV - compacto.jpg" class="card-img-top rounded-top-3" alt="Dia dos Trabalhadores"
+                     style="width: 100%; height: 150px; object-fit: cover; object-position: top;">
                 <div class="card-body">
                     <h5 class="card-title"><strong>Dia dos Trabalhadores!</strong></h5>
                     <p class="card-text">Dê uma olhada em quem faz tudo acontecer!</p>
@@ -187,7 +193,9 @@
             </div>
         </div>
         <div class="col-md-3 mb-3 mx-2">
-            <div class="card alert alert-warning" style="height: 300px">
+            <div class="card alert alert-warning px-0 pt-0" style="height: 100%; border: none;">
+                <img src="~/Content/Avisos/comunicado1 (002).jpg" class="card-img-top rounded-top-3" alt="Comunicado sobre Uniformes"
+                     style="width: 100%; height: 150px; object-fit: cover; object-position: top;">
                 <div class="card-body">
                     <h5 class="card-title"><strong>Comunicado sobre Uniformes</strong></h5>
                     <p class="card-text">Saiba tudo sobre os novos uniformes da Softhair!</p>
@@ -196,6 +204,8 @@
             </div>
         </div>
     </div>
+
+
 
     <div class="container reveal">
 
@@ -251,89 +261,89 @@
             </span>
             <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
         </div>
-            <div class="col-8">
-                <table id="myTable3" class="display table-responsive table-bordered text-center reveal">
-                    <thead>
-                        <tr style="background-color: violet;">
-                            <th>DATA</th>
-                            <th>NOME</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr><td>01/mai</td><td><strong>Feriado</strong></td></tr>
-                        <tr><td>02/mai</td><td>Paula</td></tr>
-                        <tr><td>05/mai</td><td>Pedro Ivo</td></tr>
-                        <tr><td>06/mai</td><td>Quintiliana (Tininha)</td></tr>
-                        <tr><td>07/mai</td><td>Tatiane Franco</td></tr>
-                        <tr><td>08/mai</td><td>Thiago Soares</td></tr>
-                        <tr><td>09/mai</td><td>Victor César</td></tr>
-                        <tr><td>12/mai</td><td>Adila Ribeiro</td></tr>
-                        <tr><td>13/mai</td><td>Alana</td></tr>
-                        <tr><td>14/mai</td><td>Aline Moreira</td></tr>
-                        <tr><td>15/mai</td><td>Andreza</td></tr>
-                        <tr><td>16/mai</td><td>Barbára Vitória</td></tr>
-                        <tr><td>19/mai</td><td>Berenice Longuinhos</td></tr>
-                        <tr><td>20/mai</td><td>Camila Barbosa</td></tr>
-                        <tr><td>21/mai</td><td>Crimacia Oliveira</td></tr>
-                        <tr><td>22/mai</td><td>Danielle Stefânia</td></tr>
-                        <tr><td>23/mai</td><td>Dayse Mara</td></tr>
-                        <tr><td>26/mai</td><td>Dayse Xavier</td></tr>
-                        <tr><td>27/mai</td><td>Deivid Rodrigues</td></tr>
-                        <tr><td>28/mai</td><td>Fagner Miguel</td></tr>
-                        <tr><td>29/mai</td><td>Felipe</td></tr>
-                        <tr><td>30/mai</td><td>Gerald Wagner</td></tr>
-                        <tr><td>02/jun</td><td>Isabella Freesz</td></tr>
-                        <tr><td>03/jun</td><td>Izabela Santos</td></tr>
-                        <tr><td>04/jun</td><td>Jade Dayanne</td></tr>
-                        <tr><td>05/jun</td><td>Jaqueline</td></tr>
-                        <tr><td>06/jun</td><td>João Victor</td></tr>
-                        <tr><td>09/jun</td><td>Karolina</td></tr>
-                        <tr><td>10/jun</td><td>Karoline Sonaly</td></tr>
-                        <tr><td>11/jun</td><td>Lívia Carvalho</td></tr>
-                        <tr><td>12/jun</td><td>Lorrayne Braga</td></tr>
-                        <tr><td>13/jun</td><td>Luana Alves</td></tr>
-                        <tr><td>16/jun</td><td>Luiz Caio</td></tr>
-                        <tr><td>17/jun</td><td>Luiz Guilherme</td></tr>
-                        <tr><td>18/jun</td><td>Luiz Gustavo</td></tr>
-                        <tr><td>19/jun</td><td>Feriado</td></tr>
-                        <tr><td>20/jun</td><td>Maria Eduarda</td></tr>
-                        <tr><td>23/jun</td><td>Maria Laura</td></tr>
-                        <tr><td>24/jun</td><td>Mariana Ferreira</td></tr>
-                        <tr><td>25/jun</td><td>Miguel Salles</td></tr>
-                        <tr><td>26/jun</td><td>Natã</td></tr>
-                        <tr><td>27/jun</td><td>Paula</td></tr>
-                        <tr><td>30/jun</td><td>Pedro Ivo</td></tr>
-                    </tbody>
-                </table>
-            </div>
-            @*<div class="col-sm-12 col-md-6 reveal">
+        <div class="col-8">
+            <table id="myTable3" class="display table-responsive table-bordered text-center reveal">
+                <thead>
+                    <tr style="background-color: violet;">
+                        <th>DATA</th>
+                        <th>NOME</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>01/mai</td><td><strong>Feriado</strong></td></tr>
+                    <tr><td>02/mai</td><td>Paula</td></tr>
+                    <tr><td>05/mai</td><td>Pedro Ivo</td></tr>
+                    <tr><td>06/mai</td><td>Quintiliana (Tininha)</td></tr>
+                    <tr><td>07/mai</td><td>Tatiane Franco</td></tr>
+                    <tr><td>08/mai</td><td>Thiago Soares</td></tr>
+                    <tr><td>09/mai</td><td>Victor César</td></tr>
+                    <tr><td>12/mai</td><td>Adila Ribeiro</td></tr>
+                    <tr><td>13/mai</td><td>Alana</td></tr>
+                    <tr><td>14/mai</td><td>Aline Moreira</td></tr>
+                    <tr><td>15/mai</td><td>Andreza</td></tr>
+                    <tr><td>16/mai</td><td>Barbára Vitória</td></tr>
+                    <tr><td>19/mai</td><td>Berenice Longuinhos</td></tr>
+                    <tr><td>20/mai</td><td>Camila Barbosa</td></tr>
+                    <tr><td>21/mai</td><td>Crimacia Oliveira</td></tr>
+                    <tr><td>22/mai</td><td>Danielle Stefânia</td></tr>
+                    <tr><td>23/mai</td><td>Dayse Mara</td></tr>
+                    <tr><td>26/mai</td><td>Dayse Xavier</td></tr>
+                    <tr><td>27/mai</td><td>Deivid Rodrigues</td></tr>
+                    <tr><td>28/mai</td><td>Fagner Miguel</td></tr>
+                    <tr><td>29/mai</td><td>Felipe</td></tr>
+                    <tr><td>30/mai</td><td>Gerald Wagner</td></tr>
+                    <tr><td>02/jun</td><td>Isabella Freesz</td></tr>
+                    <tr><td>03/jun</td><td>Izabela Santos</td></tr>
+                    <tr><td>04/jun</td><td>Jade Dayanne</td></tr>
+                    <tr><td>05/jun</td><td>Jaqueline</td></tr>
+                    <tr><td>06/jun</td><td>João Victor</td></tr>
+                    <tr><td>09/jun</td><td>Karolina</td></tr>
+                    <tr><td>10/jun</td><td>Karoline Sonaly</td></tr>
+                    <tr><td>11/jun</td><td>Lívia Carvalho</td></tr>
+                    <tr><td>12/jun</td><td>Lorrayne Braga</td></tr>
+                    <tr><td>13/jun</td><td>Luana Alves</td></tr>
+                    <tr><td>16/jun</td><td>Luiz Caio</td></tr>
+                    <tr><td>17/jun</td><td>Luiz Guilherme</td></tr>
+                    <tr><td>18/jun</td><td>Luiz Gustavo</td></tr>
+                    <tr><td>19/jun</td><td>Feriado</td></tr>
+                    <tr><td>20/jun</td><td>Maria Eduarda</td></tr>
+                    <tr><td>23/jun</td><td>Maria Laura</td></tr>
+                    <tr><td>24/jun</td><td>Mariana Ferreira</td></tr>
+                    <tr><td>25/jun</td><td>Miguel Salles</td></tr>
+                    <tr><td>26/jun</td><td>Natã</td></tr>
+                    <tr><td>27/jun</td><td>Paula</td></tr>
+                    <tr><td>30/jun</td><td>Pedro Ivo</td></tr>
+                </tbody>
+            </table>
+        </div>
+        @*<div class="col-sm-12 col-md-6 reveal">
                 <img src="~/Content/Imagens/birthday.png" class="img-fluid"/>
             </div>*@
-        </div>
+    </div>
 
-        <div class="container reveal" id="calendarioSection" style="height: 50px">
-        </div>
-        <div class="text-center mt-5">
-            <span class="reveal py-2 px-5 fs-3 rounded-4" style="color:purple; background-color: #F8F9FA;"><strong>CALENDÁRIO</strong></span>
-            <div class="d-flex align-items-center justify-content-center my-3 reveal">
-                <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
-                <span class="px-2 text-muted" style="font-size: 2rem;">
-                    <i class="fa-solid fa-calendar-days"></i>
-                </span>
-                <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
-            </div>
-        </div>
-        <p class="text-center mb-5 reveal">Aqui se encontra o Calendário oficial da empresa</p>
-
-        <div class="row justify-content-center my-5 reveal w-100">
-            <div class="col-12 col-sm-12 col-md-5" id='calendar' style="width: 45%"></div>
-            <div class="col-12 col-sm-12 col-md-5 text-center">
-                <h4 class="my-3">🗓️ DATAS COMEMORATIVAS</h4>
-                <ul id="holiday-legend" class="list-unstyled"></ul>
-                <ul id="holiday-legend" class="list-unstyled"></ul>
-            </div>
+    <div class="container reveal" id="calendarioSection" style="height: 50px">
+    </div>
+    <div class="text-center mt-5">
+        <span class="reveal py-2 px-5 fs-3 rounded-4" style="color:purple; background-color: #F8F9FA;"><strong>CALENDÁRIO</strong></span>
+        <div class="d-flex align-items-center justify-content-center my-3 reveal">
+            <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
+            <span class="px-2 text-muted" style="font-size: 2rem;">
+                <i class="fa-solid fa-calendar-days"></i>
+            </span>
+            <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
         </div>
     </div>
+    <p class="text-center mb-5 reveal">Aqui se encontra o Calendário oficial da empresa</p>
+
+    <div class="row justify-content-center my-5 reveal w-100">
+        <div class="col-12 col-sm-12 col-md-5" id='calendar' style="width: 45%"></div>
+        <div class="col-12 col-sm-12 col-md-5 text-center">
+            <h4 class="my-3">🗓️ DATAS COMEMORATIVAS</h4>
+            <ul id="holiday-legend" class="list-unstyled"></ul>
+            <ul id="holiday-legend" class="list-unstyled"></ul>
+        </div>
+    </div>
+</div>
 
 <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
     <div class="modal-dialog">
