ramais, correção negrito diretores

--- a/Intranet/Views/Home/_Contact.cshtml
+++ b/Intranet/Views/Home/_Contact.cshtml
@@ -11,10 +11,10 @@
         cursor: pointer
     }
 </style>
-<div class="" style="width: 100%; height: 50px; background-color: white;"></div>
+<div class="" style="width: 100%; height: 40px; background-color: white;"></div>
 <div class="container-fluid mb-5" style="background-color: #F8F9FA;">
     <div class="row justify-content-center mx-3 reveal">
-        <div class="text-center mt-5">
+        <div class="text-center mt-3">
             <span class="reveal py-2 px-5 fs-3 rounded-4" style="color:purple; background-color: #F8F9FA;"><strong>CONTATOS DOS COLABORADORES</strong></span>
             <div class="d-flex align-items-center justify-content-center my-3 reveal">
                 <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
@@ -24,7 +24,9 @@
                 <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
             </div>
         </div>
-        <p class="text-center mb-5">Utilize a barra de pesquisa para encontrar o contato de algum colaborador da empresa. <strong>Não repassar diretamente ligações aos nomes destacados!!!</strong></p>
+        <p class="text-center mb-3">Utilize a barra de pesquisa para encontrar o contato de algum colaborador da empresa. </p>
+        <div class="col-5 alert alert-danger text-center pt-1 m-0">
+        <strong><i class="fa-solid fa-triangle-exclamation fs-3 px-2 pt-2 align-bottom"></i>Não repassar diretamente ligações aos Diretores!!!</strong></div>
         <div class="col-sm-12 col-md-8 mb-3" style="width: 100%; height:900px">
             <table id="myTable2" class="display text-center table-bordered">
                 <thead style="background-color: #CCA9DD;">
@@ -38,7 +40,7 @@
                 <tbody>
                     <!-- Diretoria -->
                     <tr>
-                        <td><strong>Rodrigo Rocha</strong></td>
+                        <td>Rodrigo Rocha</td>
                         <td>7711</td>
                         <td class="email-cell">rodrigo@softhair.com.br</td>
                         <td>Diretor</td>
@@ -97,7 +99,7 @@
                     <!-- Comercial -->
                     <tr>
 
-                        <td><strong>Rodrigo de Sousa</strong></td>
+                        <td>Rodrigo de Sousa</td>
                         <td>7714</td>
                         <td class="email-cell">rodsousa@softhair.com.br</td>
                         <td>Comercial</td>
@@ -241,7 +243,7 @@
 
                     <!-- Financeiro / Fiscal -->
                     <tr>
-                        <td><strong>Silvânia Maria</strong></td>
+                        <td>Silvânia Maria</td>
                         <td>-</td>
                         <td class="email-cell">silvania@softhair.com.br</td>
                         <td>Financeiro / Fiscal</td>
@@ -283,7 +285,7 @@
                         <td>Financeiro / Fiscal</td>
                     </tr>
                     <tr>
-                        <td><strong>Letícia Rodrigues</strong></td>
+                        <td>Letícia Rodrigues</td>
                         <td>7701</td>
                         <td class="email-cell">leticia@softhair.com.br</td>
                         <td>Jurídico</td>
@@ -391,7 +393,7 @@
 
                     <!-- Qualidade -->
                     <tr>
-                        <td><strong>Lívia Rodrigues</strong></td>
+                        <td>Lívia Rodrigues</td>
                         <td>7753</td>
                         <td class="email-cell">livia@softhair.com.br</td>
                         <td>Qualidade</td>
