adição escalas de café e almoço

--- a/Intranet/Views/Home/_Contact.cshtml
+++ b/Intranet/Views/Home/_Contact.cshtml
@@ -31,10 +31,10 @@
             <table id="myTable2" class="display text-center table-bordered">
                 <thead style="background-color: #CCA9DD;">
                     <tr>
-                        <th>NOME</th>
-                        <th>RAMAL</th>
-                        <th>EMAIL</th>
-                        <th>DEPARTAMENTO</th>
+                        <th class="text-center">NOME</th>
+                        <th class="text-center">RAMAL</th>
+                        <th class="text-center">EMAIL</th>
+                        <th class="text-center">DEPARTAMENTO</th>
                     </tr>
                 </thead>
                 <tbody>
