--- a/Intranet/Views/Home/_About.cshtml
+++ b/Intranet/Views/Home/_About.cshtml
@@ -50,4 +50,188 @@
             <p>Não insista em uma ligação caso o ramal esteja ocupado.</p>
         </div>
     </div>
+    <div class="text-center pt-5 reveal">
+        <span class="reveal py-2 px-5 fs-3 rounded-4" style="color:purple; background-color: #F8F9FA;"><strong>HORÁRIOS DAS REFEIÇÕES</strong></span>
+        <div class="d-flex align-items-center justify-content-center my-3 reveal">
+            <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
+            <span class="px-2 text-muted" style="font-size: 2rem;">
+                <i class="fa-solid fa-drumstick-bite"></i>
+            </span>
+            <hr class="mx-2" style="width: 40%; height: 3px; background-color: black; border: none;">
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="my-3">
+                <h3><strong>Escala do Café</strong></h3>
+                <span>Aqui se encontram os horários de café dos funcionários do escritório.</span>
+            </div>
+            <div class="col-10">
+                <table class="w-100 table-bordered" cellpadding="8" cellspacing="0">
+                    <thead style="background-color: #CCA9DD;">
+                        <tr>
+                            <th>GRUPO</th>
+                            <th>HORÁRIO</th>
+                            <th>FUNCIONÁRIOS</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>08:00 – 08:10</td>
+                            <td>Camila Barbosa, Izabela Amora, Gerald, Aline Moreira</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>08:15 – 08:25</td>
+                            <td>Karoline Oliveira, Dayse Xavier</td>
+                        </tr>
+                        <tr style="background-color: #ffe6e6;">
+                            <td>-</td>
+                            <td>08:30 – 08:40 (Ginástica Laboral)</td>
+                            <td>⛔ Pausa obrigatória</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>08:45 – 08:55</td>
+                            <td>Fagner, Danielle Stefânia, Berenice Longuinhos, João Victor</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>09:00 – 09:10</td>
+                            <td>Deivid Rodrigues, Quintiliana (Tininha), Victor César, Felipe, Adila Ribeiro</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>09:15 – 09:25</td>
+                            <td>Lorrayne Braga, Jaqueline, Maria Eduarda, Pedro Ivo, Luiz Caio</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>09:30 – 09:40</td>
+                            <td>Thiago Soares, Luana Alves,</td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td>09:45 – 09:55</td>
+                            <td>Maria Laura, Miguel Salles, Crimacia Oliveira, Luiz Gustavo, Dayse Mara</td>
+                        </tr>
+                        <tr>
+                            <td>8</td>
+                            <td>10:00 – 10:10</td>
+                            <td>Karolina, Tatiane Franco, Natã, Jade Dayanne</td>
+                        </tr>
+                        <tr>
+                            <td>9</td>
+                            <td>10:15 – 10:25</td>
+                            <td>Alana, Lívia Carvalho</td>
+                        </tr>
+                        <tr>
+                            <td>10</td>
+                            <td>10:30 – 10:40</td>
+                            <td>Mariana Ferreira</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-5 pb-5 mt-5">
+                <h3><strong>Regras do Café:</strong></h3>
+                <div><i class="fa-solid fa-check" style="color: purple"></i> <strong style="color: purple">Duração:</strong> Cada grupo tem 10 minutos para o café.</div>
+                <div><i class="fa-solid fa-check" style="color: purple"></i> <strong style="color: purple">Intervalo:</strong> Respeite os 5 minutos entre grupos para evitar filas.</div>
+                <div><i class="fa-solid fa-check" style="color: purple"></i> <strong style="color: purple">Limite:</strong> Máximo de 5 pessoas por horário.</div>
+                <div><i class="fa-solid fa-check" style="color: purple"></i> <strong style="color: purple">Ginástica Laboral:</strong> Das 08:30–08:40 (pausa obrigatória às 08:25).</div>
+            </div>
+            <hr class="mx-2" style="width: 75%; height: 3px; background-color: black; border: none;" />
+        </div>
+
+        <div class="row justify-content-center pb-5">
+            <div class="col-10">
+                <div class="my-3">
+                    <h3><strong>Escala do Almoço</strong></h3>
+                    <span>Aqui se encontram os horários de almoço dos funcionários do escritório.</span>
+                </div>
+                <table class="table-bordered w-100 text-center" cellpadding="8" cellspacing="0">
+                    <thead style="background-color: #CCA9DD;">
+                        <tr>
+                            <th colspan="5">COZINHA</th>
+                            <th colspan="5">REFEITÓRIO 1º PISO</th>
+                        </tr>
+                        <tr>
+                            <th>11h30min</th>
+                            <th>12h00min</th>
+                            <th>12h30min</th>
+                            <th>13h00min</th>
+                            <th>13h30min</th>
+                            <th>12h00</th>
+                            <th>12h30</th>
+                            <th>13h00min</th>
+                            <th>13h15min</th>
+                            <th>13h30min</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Gerald</td>
+                            <td>Berenice</td>
+                            <td>Camila</td>
+                            <td>Fagner</td>
+                            <td>Tati</td>
+                            <td>Karoline (Jurídico)</td>
+                            <td>Victor</td>
+                            <td>Jade</td>
+                            <td>Luiz (TI)</td>
+                            <td>Natã</td>
+                        </tr>
+                        <tr>
+                            <td>Felipe</td>
+                            <td>Tininha</td>
+                            <td>Andreza</td>
+                            <td>Deivid</td>
+                            <td>Jaqueline</td>
+                            <td></td>
+                            <td>João</td>
+                            <td>Thiago (CT)</td>
+                            <td>Maria Laura</td>
+                            <td>Paula</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Crimacia</td>
+                            <td>Luana</td>
+                            <td>Pedro</td>
+                            <td>Dani</td>
+                            <td></td>
+                            <td>Aline</td>
+                            <td>Luiz (MKT)</td>
+                            <td>Dayse Mara</td>
+                            <td>Alana</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Karolina (E-commerce)</td>
+                            <td>Adila</td>
+                            <td>Caio</td>
+                            <td>Lorrayne</td>
+                            <td></td>
+                            <td>Camila (MKT)</td>
+                            <td>Mariana</td>
+                            <td></td>
+                            <td>Miguel</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Nancy</td>
+                            <td>Duda (CT)</td>
+                            <td>Diego</td>
+                            <td>Dayse Xavier</td>
+                            <td></td>
+                            <td>Livia</td>
+                            <td>Izabela (Fiscal)</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
