adição cecilia lista de ramais

--- a/Intranet/Views/Home/_Contact.cshtml
+++ b/Intranet/Views/Home/_Contact.cshtml
@@ -382,6 +382,12 @@
                         <td class="email-cell">controleq4@softhair.com.br</td>
                         <td>Laboratório</td>
                     </tr>
+                    <tr>
+                        <td>Cecília</td>
+                        <td>7741</td>
+                        <td class="email-cell">producao@softhair.com.br</td>
+                        <td>Laboratório</td>
+                    </tr>
 
                     <!-- RRS Vendas -->
                     <tr>
