--- a/Intranet/Views/Home/_Contact.cshtml
+++ b/Intranet/Views/Home/_Contact.cshtml
@@ -91,7 +91,7 @@
                     </tr>
                     <tr>
                         <td>Luiz Caio</td>
-                        <td>-</td>
+                        <td>7747</td>
                         <td class="email-cell">promocoes4@softhair.com.br</td>
                         <td>Merchandising</td>
                     </tr>
@@ -284,6 +284,7 @@
                         <td class="email-cell">financeiro5@softhair.com.br</td>
                         <td>Financeiro / Fiscal</td>
                     </tr>
+                    <!-- Jurídico -->
                     <tr>
                         <td>Letícia Rodrigues</td>
                         <td>7701</td>
@@ -292,25 +293,25 @@
                     </tr>
                     <tr>
                         <td>Andreza Domenicci</td>
-                        <td>7743</td>
+                        <td>7722</td>
                         <td class="email-cell">andreza@softhair.com.br</td>
                         <td>Jurídico</td>
                     </tr>
                     <tr>
                         <td>Aline Moreira</td>
-                        <td>7726</td>
+                        <td>7731</td>
                         <td class="email-cell">juridico2@softhair.com.br</td>
                         <td>Jurídico</td>
                     </tr>
                     <tr>
                         <td>Karoline Oliveira</td>
-                        <td>7742</td>
+                        <td>7739</td>
                         <td class="email-cell">juridico1@softhair.com.br</td>
                         <td>Jurídico</td>
                     </tr>
                     <tr>
                         <td>Victor César</td>
-                        <td>7745</td>
+                        <td>7757</td>
                         <td class="email-cell">juridico3@softhair.com.br</td>
                         <td>Jurídico</td>
                     </tr>
