--- a/Intranet/Views/Home/_Contact.cshtml
+++ b/Intranet/Views/Home/_Contact.cshtml
@@ -406,7 +406,7 @@
                         <td>Qualidade</td>
                     </tr>
                     <tr>
-                        <td>Gabriel Maciel</td>
+                        <td>Gabriela Maciel</td>
                         <td>7754</td>
                         <td class="email-cell">qualidade@softhair.com.br</td>
                         <td>Qualidade</td>
